--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@iconscout/unicons": "^2.1.11",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
@@ -17,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
+    "vue-unicons": "^3.0.0",
     "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0"
   },
