--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
     "socket.io-client": "^2.2.0",
+    "v-click-outside": "^3.1.2",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
