--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
-    "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
     "socket.io-client": "^2.2.0",
     "v-click-outside": "^3.1.2",
@@ -20,7 +19,8 @@
     "vue-inline-svg": "^2.0.0",
     "vue-router": "^3.2.0",
     "vuedraggable": "^2.24.3",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vue-moment": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
