--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-inline-svg": "^2.0.0",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
     "vuedraggable": "^2.24.3",
-    "vuex": "^3.4.0",
-    "vue-moment": "^4.1.0"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
