--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "socket.io-client": "^2.2.0",
     "v-click-outside": "^3.1.2",
     "vue": "^2.6.11",
+    "vue-audio-recorder": "^3.0.1",
     "vue-chartjs": "^3.5.1",
     "vue-inline-svg": "^2.0.0",
     "vue-router": "^3.2.0",
